성분명으로 검색하는 화면 추가
결과창 수정
- 이름, 성분명, 사진도 나오도록 추가
- 복용정보 제대로 나오도록 수정

글씨 색이나 크기 등 기타 UI 변경

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,19 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context="com.uihyun.medic.ResultActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/result_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#656565"
+            android:layout_marginTop="20dp"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/result_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#656565"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/result_image"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp">
 
             <ImageView
                 android:id="@+id/guide_0"
@@ -69,32 +95,30 @@
             android:id="@+id/guide_what"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/guide_what"
-            android:textColor="#000000"
-            android:layout_marginTop="30dp"
-            android:textSize="35dp" />
+            android:textColor="#656565"
+            android:layout_marginTop="20dp"
+            android:textSize="25dp" />
 
         <TextView
             android:id="@+id/guide_what_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="20dp" />
+            android:textColor="#656565"
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/guide_how"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/guide_how"
-            android:textColor="#000000"
-            android:layout_marginTop="25dp"
-            android:textSize="35dp" />
+            android:textColor="#656565"
+            android:layout_marginTop="20dp"
+            android:textSize="25dp" />
 
         <TextView
             android:id="@+id/guide_how_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="20dp" />
+            android:textColor="#656565"
+            android:textSize="18dp" />
     </LinearLayout>
-    </ScrollView>
+</ScrollView>
