--- a/app/src/main/res/layout/activity_indg.xml
+++ b/app/src/main/res/layout/activity_indg.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".IndgActivity">
 
     <EditText
         android:layout_width="match_parent"
@@ -17,12 +17,12 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:hint="@string/search_hint_name"
+        android:hint="@string/search_hint_indg"
         android:imeOptions="actionSearch" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_view" />
+        android:id="@+id/list_view_indg" />
 
 </LinearLayout>
