--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,8 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:orientation="vertical">
 
         <TextView
@@ -19,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#656565"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:textSize="30dp" />
 
@@ -27,6 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#656565"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:textSize="20dp" />
 
         <ImageView
@@ -34,6 +36,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="10dp" />
 
         <LinearLayout
@@ -41,6 +45,7 @@
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
             android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp">
 
             <ImageView
@@ -68,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
@@ -91,64 +97,73 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/guide_usage"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:layout_marginTop="20dp"
-            android:textSize="25dp" />
+            android:background="#FFFFFF"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/guide_usage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/guide_usage_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:textSize="18dp" />
+            <TextView
+                android:id="@+id/guide_usage_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/guide_what"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:layout_marginTop="20dp"
-            android:textSize="25dp" />
+            <TextView
+                android:id="@+id/guide_what"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/guide_what_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:textSize="18dp" />
+            <TextView
+                android:id="@+id/guide_what_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/guide_how"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:layout_marginTop="20dp"
-            android:textSize="25dp" />
+            <TextView
+                android:id="@+id/guide_how"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/guide_how_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:textSize="18dp" />
+            <TextView
+                android:id="@+id/guide_how_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/guide_store"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:layout_marginTop="20dp"
-            android:textSize="25dp" />
+            <TextView
+                android:id="@+id/guide_store"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/guide_store_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#656565"
-            android:textSize="18dp" />
+            <TextView
+                android:id="@+id/guide_store_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#656565"
+                android:layout_marginBottom="20dp"
+                android:textSize="18dp" />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
