--- a/app/src/main/res/layout/activity_indg.xml
+++ b/app/src/main/res/layout/activity_indg.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".IndgActivity">
+    tools:context=".page.IndgActivity">
 
     <EditText
         android:layout_width="match_parent"
