--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.uihyun.medic.AboutActivity">
+    tools:context=".page.AboutActivity">
 
     <TextView
         android:layout_width="match_parent"
