--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context="com.uihyun.medic.ShapeActivity">
+    tools:context=".page.ShapeActivity">
 
     <Spinner
         android:layout_width="match_parent"
