--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -12,30 +12,40 @@
         android:background="#FFFFFF"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/add_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_favorite_selector" />
+
         <TextView
             android:id="@+id/result_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#656565"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
+            android:textColor="#656565"
             android:textSize="30dp" />
 
         <TextView
             android:id="@+id/result_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#656565"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="#656565"
             android:textSize="20dp" />
 
         <ImageView
             android:id="@+id/result_image"
-            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp" />
@@ -43,10 +53,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:background="#FFFFFF"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/guide_0"
@@ -72,8 +82,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
             android:layout_gravity="center_horizontal"
+            android:background="#FFFFFF"
             android:orientation="horizontal">
 
             <ImageView
@@ -100,16 +110,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:background="#FFFFFF"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/guide_usage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#656565"
                 android:layout_marginTop="20dp"
+                android:textColor="#656565"
                 android:textSize="25dp" />
 
             <TextView
@@ -123,8 +134,8 @@
                 android:id="@+id/guide_what"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#656565"
                 android:layout_marginTop="20dp"
+                android:textColor="#656565"
                 android:textSize="25dp" />
 
             <TextView
@@ -138,8 +149,8 @@
                 android:id="@+id/guide_how"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#656565"
                 android:layout_marginTop="20dp"
+                android:textColor="#656565"
                 android:textSize="25dp" />
 
             <TextView
@@ -153,16 +164,16 @@
                 android:id="@+id/guide_store"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#656565"
                 android:layout_marginTop="20dp"
+                android:textColor="#656565"
                 android:textSize="25dp" />
 
             <TextView
                 android:id="@+id/guide_store_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#656565"
                 android:layout_marginBottom="20dp"
+                android:textColor="#656565"
                 android:textSize="18dp" />
         </LinearLayout>
     </LinearLayout>
