--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,60 +8,60 @@
     tools:context=".page.ShapeActivity">
 
     <Spinner
+        android:id="@+id/spinner_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/spinner_type" />
+        android:layout_marginTop="10dp" />
 
     <Spinner
+        android:id="@+id/spinner_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/spinner_color" />
+        android:layout_marginTop="10dp" />
 
     <Spinner
+        android:id="@+id/spinner_shape"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/spinner_shape" />
+        android:layout_marginTop="10dp" />
 
     <Spinner
+        android:id="@+id/spinner_line"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/spinner_line" />
+        android:layout_marginTop="10dp" />
 
     <EditText
+        android:id="@+id/search_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/search_text"
-        android:inputType="text"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:hint="@string/search_hint_shape"
-        android:imeOptions="actionSearch" />
+        android:imeOptions="actionSearch"
+        android:inputType="text" />
 
     <Button
+        android:id="@+id/button_search"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="@string/button_search"
-        android:id="@+id/button_search"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/button_search" />
 
     <ListView
+        android:id="@+id/list_view_shape"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/list_view_shape" />
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
