--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,8 +7,8 @@
     tools:context=".page.SplashActivity">
 
     <ImageView
+        android:id="@+id/splash"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/splash"/>
+        android:layout_centerInParent="true" />
 </RelativeLayout>
