--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listview_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:id="@+id/listview_item"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/list_image"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:scaleType="fitXY"
-        android:background="#FFFFFF"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_alignParentLeft="true"/>
+        android:background="#FFFFFF"
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/list_image"
+        android:background="#FFFFFF"
         android:orientation="vertical">
 
         <TextView
