--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context=".page.FavoriteActivity">
 
+    <Button
+        android:id="@+id/refresh_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/refresh" />
+
     <ListView
         android:id="@+id/favorite_list"
         android:layout_width="match_parent"
