about 화면에 version 정보 추가

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -42,4 +42,21 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
         android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/version_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/version"
+        android:textColor="#656565"
+        android:textSize="20dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/darker_gray" />
 </LinearLayout>
