--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:textColor="#656565"
+        android:autoLink="web"
         android:textSize="20dp" />
 
 </LinearLayout>
