--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="50dp"
         android:autoLink="web"
         android:textColor="#656565"
+        android:textColorLink="#5E6370"
         android:textSize="20dp" />
 
 </LinearLayout>
