전체적인 ui 수정. app version up.

--- a/app/src/main/res/drawable/tab_indg_selector.xml
+++ b/app/src/main/res/drawable/tab_indg_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- when selected -->
-    <item android:drawable="@drawable/tab_selected_indg" android:state_selected="true" />
+    <item android:drawable="@drawable/tab2_selected" android:state_selected="true"/>
     <!-- when not selected -->
-    <item android:drawable="@drawable/tab_selected_indg" android:state_selected="false" />
+    <item android:drawable="@drawable/tab2_not_selected" android:state_selected="false"/>
 </selector>
