--- a/app/src/main/res/drawable/tab_favorite_selector.xml
+++ b/app/src/main/res/drawable/tab_favorite_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- when selected -->
-    <item android:drawable="@drawable/tab_favorite_selected" android:state_selected="true" />
+    <item android:drawable="@drawable/tab4_selected" android:state_selected="true"/>
     <!-- when not selected -->
-    <item android:drawable="@drawable/tab_favorite_selected" android:state_selected="false" />
+    <item android:drawable="@drawable/tab4_not_selected" android:state_selected="false"/>
 </selector>
