--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    tools:context=".page.ShapeActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#FFFFFF"
+              android:orientation="vertical"
+              tools:context=".page.ShapeActivity">
 
     <LinearLayout
         android:id="@+id/search_layout"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"/>
 
         <Spinner
             android:id="@+id/spinner_color"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"/>
 
         <Spinner
             android:id="@+id/spinner_shape"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"/>
 
         <Spinner
             android:id="@+id/spinner_line"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"/>
 
         <EditText
             android:id="@+id/search_text"
@@ -52,18 +52,22 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/edittext_bg"
             android:hint="@string/search_hint_shape"
             android:imeOptions="actionSearch"
-            android:inputType="text" />
+            android:inputType="text"
+            android:padding="10dp"/>
 
         <Button
             android:id="@+id/button_search"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="45.99dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:text="@string/button_search" />
+            android:background="@drawable/find_button"/>
     </LinearLayout>
 
     <LinearLayout
@@ -82,12 +86,12 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
             android:textColor="#656565"
-            android:textSize="17dp" />
+            android:textSize="17dp"/>
     </LinearLayout>
 
     <ListView
         android:id="@+id/list_view_shape"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
