--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".page.SplashActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFCA5C"
+                tools:context=".page.SplashActivity">
 
     <ImageView
         android:id="@+id/splash"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
