최근 검색 기능 추가. 검색결과 갯수 쌓이는 에러 수정. 즐겨찾기 갯수 20 > 30개로 조정.

--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical"
               tools:context=".page.NameActivity">
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/search_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
         android:padding="10dp"/>
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/list_view_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
