--- a/app/src/main/res/layout/activity_indg.xml
+++ b/app/src/main/res/layout/activity_indg.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical"
               tools:context=".page.IndgActivity">
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/search_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
